# tree-sitter-ungrammar

./: Cargo.toml  LICENSE  Package.swift  README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: README.md  lib.rs
bindings/swift/: ungrammar.h
examples/: 01-at-a-glance.ungram  02-imprecise-commas.ungram  03-ungrammar-for-ungrammar.ungram  04-optional-labels.ungram
queries/: highlights.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c
test/corpus/: grammar.txt
