[package]
name = "tree-sitter-ungrammar"
description = "Ungrammar grammar for tree-sitter"
version = "0.0.2"
authors = [
	"Amaan Qureshi <amaanq12@gmail.com>",
	"Philipp Mildenberger <philipp@mildenberger.me>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "ungrammar"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Philipp-M/tree-sitter-ungrammar"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.3"

[build-dependencies]
cc = "1.0"
